--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,13 +13,16 @@
   justify-content: center;
 }
 
-@media screen and (min-width: 359px) and (max-width: 759px) {
+@media screen and (min-width: 300px) and (max-width: 759px) {
   figure {
     margin: auto;
     padding: 3px;
+    margin-top: 0px;
   }
   .box_two {
     margin: auto;
+        width: 100%;
+        justify-content: center;
   }
   .box_three {
     display: flex;
@@ -46,18 +49,24 @@
   .box_five {
     font-size: xx-large;
   }
-}
+  }
 
 @media screen and (min-width: 1024px) {
   .box_two {
-    margin: auto;
+    margin: inherit;
+        display: inherit;
+        width: 100%;
+        justify-content: center;
   }
   .box_three {
-    margin-top: 5%;
+   display: flex;
+   width: 100%;
+   justify-content: center;
   }
   .box_four {
     display: inherit;
-    margin-left: auto;
+    width: 100%;
+    justify-content: center;
   }
   .box_five {
     font-size: xx-large;
